[gd_scene load_steps=4 format=3 uid="uid://cddnwbsxe4xr6"]

[ext_resource type="Script" path="res://scenes/entities/weapons/bullet.gd" id="1_s1rsj"]
[ext_resource type="Texture2D" uid="uid://bowhw285cyxam" path="res://sprites/bullet.png" id="2_dy5v8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_itij8"]
size = Vector2(8, 8)

[node name="Bullet" type="Area2D" node_paths=PackedStringArray("timer")]
collision_layer = 16
collision_mask = 40
linear_damp = 100.0
angular_damp = 100.0
script = ExtResource("1_s1rsj")
timer = NodePath("BulletLifeSpan")

[node name="BulletCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_itij8")

[node name="BulletSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_dy5v8")

[node name="BulletLifeSpan" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="BulletLifeSpan" to="." method="_on_bullet_life_span_timeout"]
